June 2021 7.6
  - Allow to store whole LAM configuration in MySQL database
  - Docker: new options for configuration location and LAM Pro license
  - Wildcards in edit screen support lower-case mode (e.g. "$_firstname")
  - Windows: more fields can be hidden
  - LAM Pro:
   -> Export/Import of cron jobs


30.03.2021 7.5
  - PHP 7.3 required
  - PHP 8.0 compatibility (except tree view)
  - Support copying LDAP entries from account list
  - Account/PDF profiles: management of global templates and logos
  - Group of names: allow filter by member/owner (#151)
  - General information: link to groups (#152)
  - LAM Pro:
   -> Self registration: support binary attributes (e.g. for jpegPhoto)
   -> Self registration: support custom mail attributes and mail from constant value (149)
   -> Self registration: evaluate autorange at account creation (154)
   -> MIT Kerberos: check Kerberos password policy on password change, better error handling
   -> Self Service: new field to show user's quota values
   -> Self Service: allow to create Unix home directory during registration
   -> Custom type: allow for user/group/host to be able to reuse existing modules


06.12.2020 7.4
  - Argond2id support for password hashes (requires PHP 7.3) (#113)
  - 2-factor authentication:
   -> Support for Okta
   -> WebAuthn devices can be named in Self Service and WebAuthn tool
  - LAM Pro:
   -> MIT Kerberos policies support
   -> User self registration: added admin approval option and info mail for user after creation


22.09.2020 7.3
  - PHP 7.4 compatibility
  - Configuration export and import
  - Server profiles support to specify a part of the DN to hide
  - Show password prompt when a user with expired password logs into LAM admin interface (requires PHP 7.2)
  - Better error messages on login when account is expired/deactivated/...
  - Personal/Windows: photo can be uploaded via webcam
  - Windows users: group display format can be configured (cn/dn)