@@ -284,13 +284,16 @@
       <para>SMTP setup:</para>
 
       <para>Mail server: enter name + port separated by ":". E.g. "server:25"
-      will use "server" on port 25. Please note that your mail server
-      <emphasis role="bold">must</emphasis> support TLS encryption.</para>
+      will use "server" on port 25.</para>
 
       <para>User name: enter the user name if your SMTP server requires
       authentication</para>
 
       <para>Password: enter the password for the user above</para>
+
+      <para>Encryption protocol: Use TLS when unsure. SSL is only for older
+      servers and deprecated. The no encryption setting should not be used for
+      production installations.</para>
 
       <screenshot>
         <mediaobject>
