@@ -5,6 +5,7 @@ June 2021 7.6
   - Windows: more fields can be hidden
   - LAM Pro:
    -> Export/Import of cron jobs
+   -> Mail server encryption type can be configured (TLS/SSL/none)
 
 
 30.03.2021 7.5
